--- a/workflows/deploy.yml
+++ b/workflows/deploy.yml
@@ -2,15 +2,17 @@ name: Deploy Vue App to GitHub Pages
 
 on:
   push:
-    branches: [ main ]  # 或 master，根据你的默认分支名调整
+    branches: [ main ]  # 请确认你的默认分支是 main 还是 master
 
-  workflow_dispatch:  # 允许手动触发
+  # 允许手动触发部署
+  workflow_dispatch:
 
 permissions:
   contents: read
   pages: write
   id-token: write
 
+# 同一时间只运行一个部署任务，不取消正在进行的
 concurrency:
   group: "pages"
   cancel-in-progress: false
@@ -19,10 +21,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
@@ -31,13 +33,16 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build project
-        run: npm run build  # 确保 vite.config.js 中 base 正确
+      - name: Build project with Vite
+        run: npm run build
+        env:
+          # 可选：防止内存溢出
+          NODE_OPTIONS: --max-old-space-size=4096
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: dist  # Vite 默认构建输出目录
+          path: dist  # Vite 默认输出目录
 
   deploy:
     environment:
