--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "login",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  // 项目基本信息配置
+  "name": "login",                    // 项目名称：登录系统
+  "private": true,                    // 私有项目，禁止意外发布到npm
+  "version": "0.0.0",                 // 初始版本号
+  "type": "module",                   // 使用ES模块系统
+  // 脚本命令配置
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "vite",                    // 开发服务器启动命令
+    "build": "vite build",            // 生产环境构建命令
+    "preview": "vite preview"         // 预览构建结果命令
   },
+  // 运行时依赖包
   "dependencies": {
-    "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue": "^3.5.18",                 // Vue 3框架，用于构建用户界面
+    "vue-router": "^4.5.1"           // Vue路由管理器，用于单页面应用导航
   },
+  // 开发环境依赖包
   "devDependencies": {
-    "@vitejs/plugin-vue": "^6.0.1",
-    "vite": "^7.1.2"
+    "@vitejs/plugin-vue": "^6.0.1",  // Vite的Vue插件，支持.vue文件编译
+    "vite": "^7.1.2"                  // 前端构建工具，提供快速的开发服务器
   }
 }
